--- a/sellshop_be/package.json
+++ b/sellshop_be/package.json
@@ -1,47 +1,47 @@
 {
-    "name": "sellshop_be",
-    "version": "0.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node ./app.js"
-    },
-    "dependencies": {
-        "axios": "^1.6.0",
-        "bcrypt": "^5.1.1",
-        "bcryptjs": "^2.4.3",
-        "cloudinary": "^1.41.0",
-        "cookie-parser": "~1.4.4",
-        "cors": "^2.8.5",
-        "dateformat": "^5.0.3",
-        "debug": "~2.6.9",
-        "dotenv": "^16.3.1",
-        "express": "~4.16.1",
-        "express-session": "^1.17.3",
-        "fs-extra": "^11.1.1",
-        "google-auth-library": "^9.2.0",
-        "html-to-text": "^9.0.5",
-        "http-errors": "~1.6.3",
-        "http-status": "^1.7.3",
-        "jade": "~1.11.0",
-        "jsonwebtoken": "^9.0.2",
-        "mongodb": "^6.3.0",
-        "mongoose": "^7.6.2",
-        "mongoose-lean-virtuals": "^0.9.1",
-        "mongoose-slug-updater": "^3.3.0",
-        "morgan": "~1.9.1",
-        "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.9.7",
-        "nodemailer-smtp-transport": "^2.7.4",
-        "nodemon": "^3.0.2",
-        "numeral": "^2.0.6",
-        "package-name": "^0.1.0",
-        "passport": "^0.6.0",
-        "passport-google-oauth2": "^0.2.0",
-        "passport-google-oauth20": "^2.0.0",
-        "passport-oauth2": "^1.7.0",
-        "path": "^0.12.7",
-        "query-string": "^8.1.0",
-        "sanitize-html": "^2.11.0"
-    },
-    "type": "module"
+  "name": "sellshop_be",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "nodemon ./app.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
+    "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "dateformat": "^5.0.3",
+    "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
+    "express": "~4.16.1",
+    "express-session": "^1.17.3",
+    "fs-extra": "^11.1.1",
+    "google-auth-library": "^9.2.0",
+    "html-to-text": "^9.0.5",
+    "http-errors": "~1.6.3",
+    "http-status": "^1.7.3",
+    "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^7.6.2",
+    "mongoose-lean-virtuals": "^0.9.1",
+    "mongoose-slug-updater": "^3.3.0",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^3.0.2",
+    "numeral": "^2.0.6",
+    "package-name": "^0.1.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2": "^1.7.0",
+    "path": "^0.12.7",
+    "query-string": "^8.1.0",
+    "sanitize-html": "^2.11.0"
+  },
+  "type": "module"
 }
